--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -15,7 +15,7 @@
     </div>
   </div>
   <div class ="row">
-<!--    render 'weather_map' -->
+   <%= render 'weather_map' %>
        <%= image_tag 'http://www.unmissableprizes.com/wp-content/uploads/2011/06/holiday-packing1-207x3001.jpg' %>
 
 
