--- a/app/views/calendar/index.html.erb
+++ b/app/views/calendar/index.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>CALENDAR</title>
-    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'  type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Raleway' rel='stylesheet'  type='text/css'>
   </head>
   <body>
     <div class="jumbotron text-center">
