--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -17,10 +17,10 @@
       <!-- TODO: Remove ID -->
       <div id="count-trips" class="caption">
         <%= link_to edit_trip_path(trip) do %>
-          <img class="edit_icon"  src="https://cdn4.iconfinder.com/data/icons/meBaze-Freebies/512/edit-notes.png" />
+          <img class="edit_icon"  src="//cdn4.iconfinder.com/data/icons/meBaze-Freebies/512/edit-notes.png" />
         <% end %>
         <%= link_to trip_path(trip), method: :delete, data: { confirm: 'Are you sure you want to permanently delete this trip?' } do %>
-          <img class="delete_icon" src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons-256/firey-orange-jelly-icons-business/079927-firey-orange-jelly-icon-business-trashcan3.png"/>
+          <img class="delete_icon" src="//cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons-256/firey-orange-jelly-icons-business/079927-firey-orange-jelly-icon-business-trashcan3.png"/>
         <% end %>
       </div>
     </div>
