another https fix

--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Unlock Instructions</title>
-    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'  type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Raleway' rel='stylesheet'  type='text/css'>
   </head>
   <body>
     <p>Hello <%= @resource.email %>!</p>
