--- a/app/views/trips/_to_pack.html.erb
+++ b/app/views/trips/_to_pack.html.erb
@@ -63,7 +63,7 @@
       </li>
     </ul>
     <br>
-    <img id="checkAll" class = "notPrint" src="http://activerain.trulia.com/image_store/uploads/7/5/4/1/2/ar12675014621457.gif" height="60px" width="60px"> <span class = "notPrint" id ="markall">Click to mark all as PACKED!</span>
+    <img id="checkAll" class = "notPrint" src="//activerain.trulia.com/image_store/uploads/7/5/4/1/2/ar12675014621457.gif" height="60px" width="60px"> <span class = "notPrint" id ="markall">Click to mark all as PACKED!</span>
     <br>
   </div>
 </div>
