--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -38,7 +38,7 @@
           <h3 class = "text-center">ITEMS TO PACK</h3>
           <hr>
           <input type="text" class="form-control add-toPack" placeholder="Add your own item to the list">
-          <img id="checkAll" src="http://activerain.trulia.com/image_store/uploads/7/5/4/1/2/ar12675014621457.gif" height="100px" width="100px"> <span id ="markall">Click to mark all as PACKED!</span>
+          <img id="checkAll" src="//activerain.trulia.com/image_store/uploads/7/5/4/1/2/ar12675014621457.gif" height="100px" width="100px"> <span id ="markall">Click to mark all as PACKED!</span>
           <hr>
           <div class="todo-footer">
             <strong><span class="count-todos"></span></strong> Items Left to pack
@@ -77,9 +77,9 @@
       </div>
     </div>
     <!--   END OF TO PACK -->
-    <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
+    <script src="//code.jquery.com/jquery-2.1.4.js"></script>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.0.0/mustache.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/2.0.0/mustache.js"></script>
   </body>
 </html>
