--- a/app/views/trips/saved_items_trip.html.erb
+++ b/app/views/trips/saved_items_trip.html.erb
@@ -28,7 +28,7 @@
           <h5 style="display:inline"><%=@saved_items_trip.end_date %></h5>
         </div>
         <div class="col-md-4">
-          <img src="https://lh5.ggpht.com/QDPh6BDfY_9LtBaTtdwUzthYHXh3EcVqZy7L1X7-z_OComHq38lOJPI1-jTCmj7CU59z=w300" height="100px" width="100px">
+          <img src="//lh5.ggpht.com/QDPh6BDfY_9LtBaTtdwUzthYHXh3EcVqZy7L1X7-z_OComHq38lOJPI1-jTCmj7CU59z=w300" height="100px" width="100px">
           <form>
             <input type="button" id="notPrint" class="btn btn-edit location" value="PRINT LIST" onClick="window.print()">
           </form>
