--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -16,7 +16,7 @@
   </div>
   <div class ="row">
    <%= render 'weather_map' %>
-       <%= image_tag 'http://www.unmissableprizes.com/wp-content/uploads/2011/06/holiday-packing1-207x3001.jpg' %>
+       <%= image_tag '//www.unmissableprizes.com/wp-content/uploads/2011/06/holiday-packing1-207x3001.jpg' %>
 
 
        <br>
