--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -69,10 +69,10 @@
 <!--   </div> -->
 <% else %>
   <div class="jumbotron text-center">
-    <h2><img style="max-width:200px;" src="http://i.imgur.com/pjs3K1M.jpg">TRAVEL PACKING ASSISTANT</h2>
+    <h2><img style="max-width:200px;" src="//i.imgur.com/pjs3K1M.jpg">TRAVEL PACKING ASSISTANT</h2>
     <p>This is an application for generating a personalized packing list with custom items for packing</p>
   </div>
-  <img id = "homepic" src="https://blogdotgofoxdotcom.files.wordpress.com/2014/10/cropped-cropped-world-travel1.jpg">
+  <img id = "homepic" src="//blogdotgofoxdotcom.files.wordpress.com/2014/10/cropped-cropped-world-travel1.jpg">
   <div class="text-center">
     <div style="height: 400px"></div>
     <div>
