footer position fixed

--- a/app/views/calendar/index.html.erb
+++ b/app/views/calendar/index.html.erb
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>CALENDAR</title>
-    <link href='//fonts.googleapis.com/css?family=Raleway' rel='stylesheet'  type='text/css'>
-  </head>
-  <body>
+<div class="content">
     <div class="jumbotron text-center">
       <h2>TRIPS CALENDAR</h2>
     </div>
@@ -28,5 +21,4 @@
     </div>
 <br>
       <%=link_to 'ADD A TRIP'.html_safe, "/", class: "btn btn-weather location" %>
-  </body>
-</html>
+</div>
