--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-inverse navbar-bottom">
-
+<!-- <nav class="navbar navbar-inverse navbar-bottom footer"> -->
+<div class="footer">
   <div class="container-fluid">
   <div class="row">
         <div class="col-sm-4">
@@ -15,4 +15,5 @@
     </div>
 </div>
   </div>
-</nav>
+<!-- </nav> -->
+</div>
