--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,3 +1,4 @@
+<div class="content">
 <% content_for(:page_title) { "ALL TRIPS" } %>
 <div class="jumbotron text-center">
   <h2 style="display:inline"> TOTAL TRIPS: </h2>
@@ -25,4 +26,5 @@
       </div>
     </div>
   <% end %>
+</div>
 </div>
