--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Edit Registration</title>
-  </head>
-  <body>
+<div class="content">
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }, html: {class: "form-signin"}) do |f| %>
     <h3 class="text-center">Edit Account Settings</h3>
     <%= f.error_notification %>
@@ -20,5 +14,4 @@
     <h3>Cancel my account</h3>
     <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
     <%= link_to "Back", :back %>
-  </body>
-</html>
+</div>
