--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Header</title>
-  </head>
-  <body>
+
     <% if current_user %>
     <nav class="navbar navbar-inverse navbar-fixed-top navbar-offset" role="navigation">
       <div class="container-fluid">
@@ -15,8 +9,8 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           </button>
-          <%= link_to 'HOME'.html_safe, root_path, class: "navbar-brand" %>
-          <%= link_to 'ADD TRIP'.html_safe, root_path, class: "navbar-brand" %>
+          <%= link_to '<i class="fa fa-home fa-2x"></i>'.html_safe, root_path, class: "navbar-brand", id: "home" %>
+          <%= link_to '   ADD NEW TRIP'.html_safe, root_path, class: "navbar-brand" %>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
@@ -32,5 +26,4 @@
       </div>
       <!-- end of container-fluid -->
     </nav>
-  </body>
-</html>
+
