--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,3 +1,4 @@
+<div class="content">
 <% content_for(:page_title) { 'Create your trip!' } %>
 <% if current_user %>
   <div class="jumbotron text-center" style="margin-bottom: 0px;">
@@ -82,6 +83,6 @@
     </div>
   </div>
 <% end %>
-
+</div>
 
 
