--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,3 +1,4 @@
+<div class="content">
 <% content_for(:page_title) { 'Your Trip' } %>
 <div class="notPrint">
   <div class="row">
@@ -17,8 +18,6 @@
   <div class ="row">
    <%= render 'weather_map' %>
        <%= image_tag '//unmissableprizes.com/wp-content/uploads/2011/06/holiday-packing1-207x3001.jpg' %>
-
-
        <br>
     <br> <br>
     <br>
@@ -69,4 +68,5 @@
       </div>
     <% end %>
   </div>
+</div>
 </div>
