--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -3,21 +3,20 @@
 <div class="notPrint">
   <div class="row">
     <div class="jumbotron text-center">
-      <h2 class ="text-center">CREATE A PACKING LIST FOR THE TRIP</h2>
-      <p>You can choose items from the suggested list or add your own items below!</p>
+      <h3 class ="text-center">CREATE A PACKING LIST FOR THE TRIP</h3>
+      <h5>You can choose items from the suggested list or add your own items below!</h5>
       <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>" />
     </div>
-    <div class="text-center notPrint">
+<!--     <div class="text-center notPrint">
       <img src="https://lh5.ggpht.com/QDPh6BDfY_9LtBaTtdwUzthYHXh3EcVqZy7L1X7-z_OComHq38lOJPI1-jTCmj7CU59z=w300" height="100px" width="100px">
       <form>
         <input type="button" id="notPrint" class="btn btn-edit location" value="PRINT YOUR PACKING LIST" onClick="window.print()">
       </form>
       <br>
-    </div>
+    </div> -->
   </div>
   <div class ="row">
    <%= render 'weather_map' %>
-       <%= image_tag '//unmissableprizes.com/wp-content/uploads/2011/06/holiday-packing1-207x3001.jpg' %>
        <br>
     <br> <br>
     <br>
