--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,6 +16,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "MY CALENDAR", calendar_path %></li>
             <li><%= link_to "MY TRIPS", trips_path %></li>
+            <li><%= link_to "TRAVEL BLOG", "#" %></li>
             <li><%= link_to "ACCOUNT SETTINGS", edit_user_registration_path %></li>
             <li><%= link_to "LOG OUT", destroy_user_session_path, method: :delete %></li>
             <% else %>
