--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,89 +1,82 @@
 <div class="content">
-<% content_for(:page_title) { 'Create your trip!' } %>
-<% if current_user %>
-  <div class="jumbotron text-center" style="margin-bottom: 0px;">
-    <h3>Let's add your trip first</h3>
-    <h5>Fill out the fields below, then choose activities and click NEXT to get the suggested Packing List</h5>
-
-  </div>
-  <hr>
-
-<!--   <div class="row"> -->
-    <div class="col-sm-4">
-    
-      <p class="flash">Seems like location does not exist. Please check your spelling or select from a suggested list</p>
-      <% if flash[:alert] %>
-        <p class="flash-error"><%= flash[:alert] %></p>
-      <% end %>
-      <% if flash[:notice] %>
-        <p class="flash-notice"><%= flash[:notice] %></p>
-      <% end %>
-  
-      <%= image_tag 'pick_destination.gif' %>
-    <br>
-    <hr>
-      <div class="form-group">
-        <label for="current">Looks like your current location is:</label>
-        <input type="text" id="query" class="form-control location" placeholder="Enter a location">
-      </div>
-      <form action="/trips" method="post">
-        <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>" />
-        <input type="hidden" value="<%= :id %>" />
-        <div class="form-group">
-          <label for="destination">What is your Destination?</label>
-          <input type="text" name="destination" class="form-control location" placeholder="Enter a location" id="log">
-        </div>
-        <div class="form-group">
-          <label for="date">Start Date</label>
-          <input class="datepicker form-control date" name="start_date" placeholder="Select Start Date">
-        </div>
-        <div class="form-group">
-          <label for="date">End Date</label>
-          <input class="datepicker form-control date" name="end_date" placeholder="Select End Date">
-        </div>
-        <br>
-        <button type="submit", class="btn btn-weather location next-button">NEXT</button>
- 
-    </div>
-    <div class="col-sm-8">
-            <div id="allCategories">
-            <div class="all_thumbs" id="showToiletries">
-            <% ActivityItem.all.sort_by { |d| d.activity_name }.each do |activity| %>
-
-                  <div class="col-sm-4">
-                    <div class="thumbnail btn activities">
-                     <%= fields_for "activity[]", activity do |ff| %>
-                       
-                        <label>
-                         <%= activity.activity_name %>
-                         <%= ff.hidden_field :id%>
-                         <%= check_box_tag 'activity_ids[]', activity.id, false %>
-                        </label>
-                        <%= image_tag("#{activity.activity_name}.jpg", :class => "activity_image") %>
-                      </div>
-                    </div>
-                    <% end %>
-                    <% end %>
+    <% content_for(:page_title) { 'Create your trip!' } %>
+        <% if current_user %>
+            <div class="jumbotron text-center" style="margin-bottom: 0px;">
+                <h3>Let's add your trip first</h3>
+                <h5>Fill out the fields below, then choose activities and click NEXT to get the suggested Packing List</h5>
             </div>
-      </div>
-    </div>
-         </form>
-<!--   </div> -->
-<% else %>
-  <div class="jumbotron text-center">
-    <h2><img style="max-width:200px;" src="//i.imgur.com/pjs3K1M.jpg">TRAVEL PACKING ASSISTANT</h2>
-    <p>This is an application for generating a personalized packing list with custom items for packing</p>
-  </div>
-  <img id = "homepic" src="//blogdotgofoxdotcom.files.wordpress.com/2014/10/cropped-cropped-world-travel1.jpg">
-  <div class="text-center">
-    <div style="height: 400px"></div>
-    <div>
-      <%= link_to "Log In", new_user_session_path, class: "btn btn-primary btn-lg" %>
-      or
-          <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
-    </div>
-  </div>
-<% end %>
+            <hr>
+         <%= form_for :trip, :url => { :action => "create" }  do |f|  %>
+            <div class="col-sm-4">
+                <p class="flash">Seems like location does not exist. Please check your spelling or select from a suggested list</p>
+                <% if flash[:alert] %>
+                    <p class="flash-error">
+                        <%=flash[:alert] %>
+                    </p>
+                    <% end %>
+                        <% if flash[:notice] %>
+                            <p class="flash-notice">
+                                <%=flash[:notice] %>
+                            </p>
+                            <% end %>
+                                <%=image_tag 'pick_destination.gif' %>
+                                    <br>
+                                    <hr>
+                                    <div class="form-group">
+                                        <label for="current">Looks like your current location is:</label>
+                                    <%= f.text_field  :current_location, placeholder: "Enter your current location", id: "query", class: "form-control location" %>
+                                    </div>
+                                        <div class="form-group">
+                                        <label for="destination">What is your Destination?</label>
+                                    <%= f.text_field  :destination, placeholder: "Enter your destination", id: "log", class: "form-control location" %>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="date">Start Date</label>
+                                    <%= f.text_field  :start_date, placeholder: "Select Start Date", class: "datepicker form-control date" %>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="date">End Date</label>
+                                    <%= f.text_field  :end_date, placeholder: "Select End Date", class: "datepicker form-control date" %>
+                                        </div>
+                                        <br>
+            </div>
+            <div class="col-sm-8">
+                <div id="allCategories">
+                    <div class="all_thumbs" id="showToiletries">
+                        <% ActivityItem.all.sort_by { |d| d.activity_name }.each do |activity| %>
+                            <div class="col-sm-4">
+                                <div class="thumbnail btn activities">
+                                    <%=fields_for "activity[]", activity do |ff| %>
+                                        <label>
+                                            <%=activity.activity_name %>
+                                                <%=ff.hidden_field :id%>
+                                                    <%=check_box_tag 'activity_ids[]', activity.id, false %>
+                                        </label>
+                                        <%=image_tag( "#{activity.activity_name}.jpg", :class=> "activity_image") %>
+                                </div>
+                            </div>
+                            <% end %>
+                                <% end %>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center">
+               <%= f.submit "GENERATE MY PACKING LIST", class: "btn btn-weather location next-button" %>
+               </div>
+          <% end %>
+            <% else %>
+                <div class="jumbotron text-center">
+                    <h2><img style="max-width:200px;" src="//i.imgur.com/pjs3K1M.jpg">TRAVEL PACKING ASSISTANT</h2>
+                    <p>This is an application for generating a personalized packing list with custom items for packing</p>
+                </div>
+                <img id="homepic" src="//blogdotgofoxdotcom.files.wordpress.com/2014/10/cropped-cropped-world-travel1.jpg">
+                <div class="text-center">
+                    <div style="height: 400px"></div>
+                    <div>
+                        <%=link_to "Log In", new_user_session_path, class: "btn btn-primary btn-lg" %>
+                            or
+                            <%=link_to "Sign Up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+                    </div>
+                </div>
+                <% end %>
 </div>
-
-
