--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -302,7 +302,7 @@ input[type="checkbox"]:checked + label {
   background: yellow !important;
 }
 .stack{
-  border:1px solid black;
+/*  border:1px solid black;*/
   width: 30% !important;
   margin: 10px;
 }
@@ -497,4 +497,8 @@ left: 63px;
 }
 #trash_message {
   padding: 15px;
+}
+.menu_icon {
+  padding-left: 12px;
+  padding-right: 12px;
 }
