--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -24,7 +24,7 @@
                                     <hr>
                                     <div class="form-group">
                                         <label for="current">Looks like your current location is:</label>
-                                    <%= f.text_field  :current_location, placeholder: "Enter your current location", id: "query", class: "form-control location" %>
+                                    <%= f.text_field  :current_location, placeholder: "Enter your current location", value: location_with_geocoder, id: "query", class: "form-control location" %>
                                     </div>
                                         <div class="form-group">
                                         <label for="destination">What is your Destination?</label>
