added gon, fixed ipinfodb

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,6 @@
-
+<head>
+  <%= include_gon %>
+ </head>
     <% if current_user %>
     <nav class="navbar navbar-inverse navbar-fixed-top navbar-offset" role="navigation">
       <div class="container-fluid">
