--- a/app/views/test_page/index.html.erb
+++ b/app/views/test_page/index.html.erb
@@ -1,44 +1,54 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <style type="text/css">
-      html, body { height: 100%; margin: 0; padding: 0; }
-      #map { height: 100%; }
-    </style>
-  </head>
-  <body>
-<div id="map-canvas" style="width: 420px; height: 480px;">
+<!-- Button trigger modal -->
+
+<div class="container"> 
+    <hr class="prettyline">
+    <br>
+    <center>
+    <h1><b>Sorry</b></h1>
+    <h3>You need to sign in or register for this service</h3>
+    <br>
+  <button class="btn btn-primary btn-lg" href="#signup" data-toggle="modal" data-target=".bs-modal-sm">Sign In/Register</button>
+  </center>
+  <br>
+    <hr class="prettyline">
+ </div>
+  
+
+<!-- Modal -->
+<div class="modal fade bs-modal-sm" id="myModal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+        <br>
+        <div class="bs-example bs-example-tabs">
+            <ul id="myTab" class="nav nav-tabs">
+              <li class="active"><a href="#signin" data-toggle="tab">Sign In</a></li>
+              <li class=""><a href="#signup" data-toggle="tab">Register</a></li>
+  
+            </ul>
+        </div>
+      <div class="modal-body">
+        <div id="myTabContent" class="tab-content">
+
+        <div class="tab-pane fade active in" id="signin">
+
+            <form class="form-horizontal">
+<!-- sign in form -->
+            </form>
+        </div>
+        <div class="tab-pane fade" id="signup">
+            <form class="form-horizontal">
+           
+ <!-- Sign Up Form -->
+
+            </form>
+      </div>
+    </div>
+      </div>
+      <div class="modal-footer">
+      <center>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </center>
+      </div>
+    </div>
+  </div>
 </div>
-<script type="text/javascript">
-  function initialize() {
- var results;
-var geocoder = new google.maps.Geocoder();
-var location = "Ukraine";
-geocoder.geocode( { 'address': location }, function(results, status) {
-    if (status == google.maps.GeocoderStatus.OK) {
-        map.setCenter(results[0].geometry.location);
-    } else {
-        alert("Could not find location: " + location);
-    }
-});
-
-
-    var mapOptions = {
-      zoom: 5,
-      styles: [{"featureType":"landscape.natural","elementType":"geometry.fill","stylers":[{"visibility":"on"},{"color":"#e0efef"}]},{"featureType":"poi","elementType":"geometry.fill","stylers":[{"visibility":"on"},{"hue":"#1900ff"},{"color":"#c0e8e8"}]},{"featureType":"road","elementType":"geometry","stylers":[{"lightness":100},{"visibility":"simplified"}]},{"featureType":"road","elementType":"labels","stylers":[{"visibility":"off"}]},{"featureType":"transit.line","elementType":"geometry","stylers":[{"visibility":"on"},{"lightness":700}]},{"featureType":"water","elementType":"all","stylers":[{"color":"#7dcdcd"}]}],
-      center: new google.maps.LatLng(-34.397, 150.644)};
-    var map = new google.maps.Map(document.getElementById('map-canvas'), 
-                                  mapOptions);
-  }
-
-  function loadScript() {
-    var script = document.createElement('script');
-    script.type = 'text/javascript';
-    script.src = 'https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyD-7NSPt2Gzjn79uQ-NoKl7xGKc0oO4H54&sensor=false&callback=initialize';
-    document.body.appendChild(script);
-  }
-
-  window.onload = loadScript();
-</script>
-  </body>
-</html>
