--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,7 +39,7 @@ body {
   margin-left: 300px !important;*/
 }
 .content{
-    margin-top: 6em;
+    margin-top: 7em;
     margin-bottom: 5em;
     height: 100%;
   /*  padding-bottom:50px;*/
@@ -604,4 +604,20 @@ left: 63px;
 #login-btn, #signup-btn {
   background: #455A64 !important;
   height: 40px !important;
+}
+.profile-pic {
+  margin-top: 50px;
+  width: 200px;
+  height: 200px;
+}
+.profile-image {
+max-width:100%;
+max-height:100%;
+}
+ul.navbar-nav li, .navbar-header {
+/*  padding-top: 10px !important;*/
+}
+.well {
+ /* padding: 15px !important; */
+  margin-bottom: 0px !important;
 }
