--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -38,11 +38,11 @@
             <li align="center" class="well">
                 <h6><%= current_user.name %></h6>
                 <%- if current_user.provider == nil || current_user.uid == nil%>
-                   <h6>Signed in as <%=current_user.email %></h6>
+                   <h6><i class="fa fa-user"></i> Signed in as <%=current_user.email %></h6>
                 <%- elsif current_user.provider == 'google_oauth2' %>
-                 <h6>Signed in with Google+</h6>
+                 <h6><i class="fa fa-user"></i>  Signed in with Google+</h6>
                  <%- else %>
-                <h6>Signed in with <%= current_user.provider.capitalize %></h6>
+                <h6><i class="fa fa-user"></i> Signed in with <%= current_user.provider.capitalize %></h6>
                 <%- end %>
               <%= link_to edit_user_registration_path, class: "btn btn-sm btn-default"  do%>
               <span class="glyphicon glyphicon-lock"> Profile Settings</span>
