--- a/app/views/test_page/index.html.erb
+++ b/app/views/test_page/index.html.erb
@@ -1,54 +1,9 @@
 <!-- Button trigger modal -->
 
 <div class="container"> 
-    <hr class="prettyline">
-    <br>
-    <center>
-    <h1><b>Sorry</b></h1>
-    <h3>You need to sign in or register for this service</h3>
-    <br>
-  <button class="btn btn-primary btn-lg" href="#signup" data-toggle="modal" data-target=".bs-modal-sm">Sign In/Register</button>
-  </center>
-  <br>
-    <hr class="prettyline">
- </div>
-  
 
-<!-- Modal -->
-<div class="modal fade bs-modal-sm" id="myModal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-sm">
-    <div class="modal-content">
-        <br>
-        <div class="bs-example bs-example-tabs">
-            <ul id="myTab" class="nav nav-tabs">
-              <li class="active"><a href="#signin" data-toggle="tab">Sign In</a></li>
-              <li class=""><a href="#signup" data-toggle="tab">Register</a></li>
-  
-            </ul>
-        </div>
-      <div class="modal-body">
-        <div id="myTabContent" class="tab-content">
 
-        <div class="tab-pane fade active in" id="signin">
-
-            <form class="form-horizontal">
-<!-- sign in form -->
-            </form>
-        </div>
-        <div class="tab-pane fade" id="signup">
-            <form class="form-horizontal">
-           
- <!-- Sign Up Form -->
-
-            </form>
-      </div>
-    </div>
-      </div>
-      <div class="modal-footer">
-      <center>
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </center>
-      </div>
-    </div>
-  </div>
+ <a class="btn btn-block btn-social btn-twitter">
+    <i class="fa fa-twitter"></i> Sign up with Twitter
+  </a>
 </div>
