gon undefined issue fixed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,9 @@
   
   </head>
   <body>
+    <script type="text/javascript">
+    <%= include_gon :watch => true, :init => true, :need_tag => false %>
+  </script>
 
     <%= render "layouts/header" %>
     <div class="container">
