--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,10 +13,6 @@
  *
 
 
-*= require_self
-*= require jquery-ui
-*= require font-awesome
-*= require_tree .
 */
 
 
@@ -117,7 +113,7 @@ body {
     color: white;
   }
  .next-button {
-  height: 50px !important; 
+  height: 50px !important;
   width: 50%;
   background-color: #00BCD4 !important;
  }
@@ -290,7 +286,7 @@ li.checked:before {
 }
 /*label { background-color:#333; color:#FFF; }*/
 
-input[type="checkbox"] {
+/*input[type="checkbox"] {
   margin: -5px 0 0 !important;
   position: absolute;
   left: 0px;
@@ -302,11 +298,11 @@ input[type="checkbox"] {
 }
 
 input[type="checkbox"]:checked + label {
-  /*  background: brown;*/
+  background: brown;
   text-decoration: line-through;
   color: black;
 }
-
+*/
 .activity {
   background: yellow !important;
 }
@@ -336,7 +332,7 @@ input[type="checkbox"]:checked + label {
   width: 150px;
   height: 150px;
   bottom: 100px;
-  left: 10px; 
+  left: 10px;
 }
 .trip_card_title {
   font-size: 14px;
@@ -367,7 +363,7 @@ position: relative;
 width: 350px;
 height: 65px;
 padding: 7px;
-background-color:#F50057; 
+background-color:#F50057;
 color:#fff;
 -webkit-border-radius: 10px;
 -moz-border-radius: 10px;
@@ -390,7 +386,7 @@ bottom: -26px;
 left: 71px;
 }
 
-.flash:before, .flash-error:before 
+.flash:before, .flash-error:before
 {
 content: '';
 position: absolute;
@@ -423,7 +419,7 @@ background: #E3FFFF;
 border-radius: 10px;
 }
 
-.flash-notice:after 
+.flash-notice:after
 {
 content: '';
 position: absolute;
@@ -450,7 +446,7 @@ left: 56px;
     font-size: 10px;
     position: fixed;
     top: 100px;
-    left: 10px; 
+    left: 10px;
 
 }
 .fc h2 {
@@ -460,11 +456,11 @@ left: 56px;
   margin-left: 180px !important;
 }
 
-#trash-bubble 
+#trash-bubble
 {
 position: fixed;
 bottom: 250px;
-left: 35px; 
+left: 35px;
 width: 210px;
 height: 80px;
 padding: 0px;
@@ -476,7 +472,7 @@ border: #B5C28B solid 4px;
 }
 
 
-#trash-bubble:after 
+#trash-bubble:after
 {
 content: '';
 position: absolute;
@@ -491,7 +487,7 @@ left: 66px;
 }
 
 
-#trash-bubble:before 
+#trash-bubble:before
 {
 content: '';
 position: absolute;
@@ -539,14 +535,14 @@ left: 63px;
     text-align: center;
   line-height: 300%;
 }
-  
+
 .omb_login .omb_socialButtons a {
-  color: white; // In yourUse @body-bg 
+  color: white; // In yourUse @body-bg
   opacity:0.9;
 }
 .omb_login .omb_socialButtons a:hover {
     color: white;
-  opacity:1;      
+  opacity:1;
 }
 .omb_login .omb_socialButtons .omb_btn-facebook {background: #3b5998;}
 .omb_login .omb_socialButtons .omb_btn-twitter {background: #00aced;}
@@ -577,7 +573,7 @@ left: 63px;
   background-color: white;
   width: 3em;
   text-align: center;
-}     
+}
 
 .omb_login .omb_loginForm .input-group.i {
   width: 2em;
@@ -586,12 +582,12 @@ left: 63px;
     color: red;
 }
 
-  
+
 @media (min-width: 768px) {
     .omb_login .omb_forgotPwd {
         text-align: right;
     margin-top:10px;
-  }   
+  }
 }
 
 .social-buttons {
